--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -48,8 +48,11 @@ spec:
           command: ["/bin/bash", "-c"]
           args:
             - |
+              if [ ! -d /bitnami/kafka/data ]; then
+                mkdir -p /bitnami/kafka/data
+              fi
               if [ ! -f /bitnami/kafka/data/meta.properties ]; then
-                /opt/kafka/bin/kafka-storage.sh format -t $CLUSTER_ID -c /opt/kafka/config/kraft/server.properties
+                /opt/kafka/bin/kafka-storage.sh format -t $CLUSTER_ID -c /opt/kafka/config/kraft/server.properties --directory /bitnami/kafka/data
               fi
               /opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/kraft/server.properties \
                 --override process.roles=$KAFKA_PROCESS_ROLES \
