--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -45,6 +45,18 @@ spec:
               value: "0@kafka-0.kafka-headless:{{ .Values.port.controller }}"
             - name: KAFKA_LOG_DIRS
               value: "/bitnami/kafka/data"
+          readinessProbe:
+            tcpSocket:
+              port: {{ .Values.port.broker }}
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            failureThreshold: 6
+          livenessProbe:
+            tcpSocket:
+              port: {{ .Values.port.broker }}
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            failureThreshold: 8
           command: ["/bin/bash", "-c"]
           args:
             - |
@@ -52,9 +64,9 @@ spec:
                 mkdir -p /bitnami/kafka/data
               fi
               if [ ! -f /bitnami/kafka/data/meta.properties ]; then
-                /opt/kafka/bin/kafka-storage.sh format -t $CLUSTER_ID -c /opt/kafka/config/kraft/server.properties --directory /bitnami/kafka/data
+                /opt/bitnami/kafka/bin/kafka-storage.sh format -t $CLUSTER_ID -c /opt/bitnami/kafka/config/kraft/server.properties --directory /bitnami/kafka/data
               fi
-              /opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/kraft/server.properties \
+              /opt/bitnami/kafka/bin/kafka-server-start.sh /opt/bitnami/kafka/config/kraft/server.properties \
                 --override process.roles=$KAFKA_PROCESS_ROLES \
                 --override node.id=$KAFKA_NODE_ID \
                 --override listeners=$KAFKA_LISTENERS \
