--- a/charts/kafka/values.yaml
+++ b/charts/kafka/values.yaml
@@ -1,6 +1,7 @@
 replicaCount: 1
 appVersion: "3.8.0"
 image: apache/kafka:3.8.0
+imagePullPolicy: IfNotPresent
 port:
   broker: 9092
   controller: 9093
