--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -50,6 +50,8 @@ spec:
               value: "0@kafka-0.kafka-headless:{{ .Values.port.controller }}"
             - name: KAFKA_LOG_DIRS
               value: "/kafka/data"
+            - name: KAFKA_LOG4J_OPTS
+              value: "-Dlog4j2.configurationFile=file:/opt/kafka/config/log4j2.properties -Xlog:gc*:file=/kafka/data/logs/kafkaServer-gc.log:time,tags:filecount=10,filesize=100M"
           readinessProbe:
             tcpSocket:
               port: {{ .Values.port.broker }}
@@ -69,8 +71,12 @@ spec:
                 mkdir -p /kafka/data
                 chown -R 1001:1001 /kafka/data
               fi
+              if [ ! -d /kafka/data/logs ]; then
+                mkdir -p /kafka/data/logs
+                chown -R 1001:1001 /kafka/data/logs
+              fi
               if [ ! -f /kafka/data/meta.properties ]; then
-                /opt/kafka/bin/kafka-storage.sh format -t $CLUSTER_ID -c /opt/kafka/config/kraft/server.properties --config log.dirs=/kafka/data
+                /opt/kafka/bin/kafka-storage.sh format -t $CLUSTER_ID -c /opt/kafka/config/kraft/server.properties
               fi
               /opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/kraft/server.properties \
                 --override process.roles=$KAFKA_PROCESS_ROLES \
