--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -52,6 +52,8 @@ spec:
               value: "/kafka/data"
             - name: KAFKA_LOG4J_OPTS
               value: "-Dlog4j2.configurationFile=file:/kafka/data/log4j2.properties"
+            - name: KAFKA_OPTS
+              value: "-Xlog:disable"
           readinessProbe:
             tcpSocket:
               port: {{ .Values.port.broker }}
@@ -78,10 +80,12 @@ spec:
               if [ ! -f /kafka/data/log4j2.properties ]; then
                 cp /opt/kafka/config/log4j2.properties /kafka/data/log4j2.properties
                 sed -i 's|appender.rolling.fileName=.*|appender.rolling.fileName=/kafka/data/logs/kafka.log|' /kafka/data/log4j2.properties
+                chown 1001:1001 /kafka/data/log4j2.properties
               fi
               if [ ! -f /kafka/data/meta.properties ]; then
                 cp /opt/kafka/config/kraft/server.properties /kafka/data/server.properties
                 echo "log.dirs=/kafka/data" >> /kafka/data/server.properties
+                chown 1001:1001 /kafka/data/server.properties
                 /opt/kafka/bin/kafka-storage.sh format -t $CLUSTER_ID -c /kafka/data/server.properties
               fi
               /opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/kraft/server.properties \
