--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -108,7 +108,9 @@ spec:
               chown 1001:1001 /kafka/data/server.properties
               /opt/kafka/bin/kafka-storage.sh format -t $CLUSTER_ID -c /kafka/data/server.properties
               fi
-              /opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/kraft/server.properties \
+              java -Xlog:none -Dlog4j2.configurationFile=file:/kafka/data/log4j2.properties \
+              -cp /opt/kafka/libs/* \
+              org.apache.kafka.server.KafkaServer \
               --override process.roles=$KAFKA_PROCESS_ROLES \
               --override node.id=$KAFKA_NODE_ID \
               --override listeners=$KAFKA_LISTENERS \
@@ -117,7 +119,8 @@ spec:
               --override inter.broker.listener.name=$KAFKA_INTER_BROKER_LISTENER_NAME \
               --override controller.listener.names=$KAFKA_CONTROLLER_LISTENER_NAMES \
               --override controller.quorum.voters=$KAFKA_CONTROLLER_QUORUM_VOTERS \
-              --override log.dirs=$KAFKA_LOG_DIRS
+              --override log.dirs=$KAFKA_LOG_DIRS \
+              /opt/kafka/config/kraft/server.properties
           volumeMounts:
             - name: kafka
               mountPath: /kafka/data
