--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -52,8 +52,6 @@ spec:
               value: "/kafka/data"
             - name: KAFKA_LOG4J_OPTS
               value: "-Dlog4j2.configurationFile=file:/kafka/data/log4j2.properties"
-            - name: KAFKA_OPTS
-              value: "-Xlog:none"
           readinessProbe:
             tcpSocket:
               port: {{ .Values.port.broker }}
@@ -108,7 +106,7 @@ spec:
               chown 1001:1001 /kafka/data/server.properties
               /opt/kafka/bin/kafka-storage.sh format -t $CLUSTER_ID -c /kafka/data/server.properties
               fi
-              java -Xlog:none -Dlog4j2.configurationFile=file:/kafka/data/log4j2.properties \
+              java -Xlog:off -Dlog4j2.configurationFile=file:/kafka/data/log4j2.properties \
               -cp /opt/kafka/libs/* \
               org.apache.kafka.server.KafkaServer \
               --override process.roles=$KAFKA_PROCESS_ROLES \
