--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -52,6 +52,8 @@ spec:
               value: "/kafka/data"
             - name: KAFKA_LOG4J_OPTS
               value: "-Dlog4j2.configurationFile=file:/kafka/data/log4j2.properties"
+            - name: KAFKA_OPTS
+              value: "-Xlog:disable"
           readinessProbe:
             tcpSocket:
               port: {{ .Values.port.broker }}
