--- a/charts/kafka/templates/statefulset.yaml
+++ b/charts/kafka/templates/statefulset.yaml
@@ -53,7 +53,7 @@ spec:
             - name: KAFKA_LOG4J_OPTS
               value: "-Dlog4j2.configurationFile=file:/kafka/data/log4j2.properties"
             - name: KAFKA_OPTS
-              value: ""
+              value: "-Djava.util.logging.config.file=/kafka/data/logging.properties"
           readinessProbe:
             tcpSocket:
               port: {{ .Values.port.broker }}
@@ -101,6 +101,17 @@ spec:
               rootLogger.appenderRef.rolling.ref=ROLLING
               EOF
               chown 1001:1001 /kafka/data/log4j2.properties
+              fi
+              if [ ! -f /kafka/data/logging.properties ]; then
+                cat > /kafka/data/logging.handlers <<EOF
+                handlers=java.util.logging.FileHandler
+                java.util.logging.FileHandler.pattern=/kafka/data/logs/kafkaServer-gc.log
+                java.util.logging.FileHandler.limit=104857600
+                java.util.logging.FileHandler.count=10
+                java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
+                java.util.logging.SimpleFormatter.format=%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS %4$s %2$s %5$s%6$s%n
+                EOF
+                chown 1001:1001 /kafka/data/logging.properties
               fi
               if [ ! -f /kafka/data/meta.properties ]; then
                 cp /opt/kafka/config/kraft/server.properties /kafka/data/server.properties
